--- a/env.yml
+++ b/env.yml
@@ -26,6 +26,7 @@ dependencies:
   - tensorflow-deps
   - tqdm
   - pip:
+    - batman-package
     - lightkurve
     - tensorflow-macos
     - tensorflow-metal
