updated environment for linux and 30 min cadence models

--- a/env.yml
+++ b/env.yml
@@ -1,4 +1,4 @@
-name: nets
+name: nets2
 channels:
   - conda-forge
   - defaults
@@ -23,11 +23,8 @@ dependencies:
   - scipy
   - seaborn
   - tensorflow
-  - tensorflow-deps
   - tqdm
   - pip:
     - batman-package
     - lightkurve
-    - tensorflow-macos
-    - tensorflow-metal
     - wotan
