--- a/env.yml
+++ b/env.yml
@@ -8,6 +8,7 @@ variables:
 dependencies:
   - python=3.8
   - astropy
+  - black
   - bokeh
   - cython
   - ipython
@@ -15,6 +16,7 @@ dependencies:
   - jupyterlab
   - matplotlib
   - numpy
+  - optuna
   - pandas
   - pip
   - poetry
@@ -27,4 +29,6 @@ dependencies:
   - pip:
     - batman-package
     - lightkurve
+    - lxml
+    - optuna-dashboard
     - wotan
