--- a/env-metal.yml
+++ b/env-metal.yml
@@ -31,6 +31,7 @@ dependencies:
     - batman-package
     - lightkurve
     - lxml
+    - memory-profiler
     - optuna-dashboard
     - tensorflow-macos
     - tensorflow-metal
