add scikeras to env, use SVC for variability, use relu, option to save ds

--- a/env-metal.yml
+++ b/env-metal.yml
@@ -33,6 +33,7 @@ dependencies:
     - lxml
     - memory-profiler
     - optuna-dashboard
+    - scikeras
     - tensorflow-macos
     - tensorflow-metal
     - wotan
