--- a/env.yml
+++ b/env.yml
@@ -30,5 +30,7 @@ dependencies:
     - batman-package
     - lightkurve
     - lxml
+    - memory-profiler
     - optuna-dashboard
+    - scikeras
     - wotan
